# django-enumfields2

./: .pre-commit-config.yaml  CHANGES.md  LICENSE  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
enumfields/: __init__.py  admin.py  enums.py  fields.py  forms.py
enumfields/drf/: __init__.py  fields.py  serializers.py
tests/: settings.py  test_checks.py  test_django_admin.py  test_django_models.py  test_enums.py  test_form_fields.py  test_serializers.py  urls.py
tests/migrations/: 0001_initial.py
