[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-enumfields"
dynamic = ["version"]
description = "Real Python Enums for Django."
readme = "README.rst"
license = "MIT"
authors = [
    { name = "HZDG", email = "webmaster@hzdg.com" },
]
maintainers = [
    { name = "Aarni Koskela", email = "akx@iki.fi" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/hzdg/django-enumfields"

[tool.hatch.version]
path = "enumfields/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/enumfields",
]
